added more images to index

--- a/index.html
+++ b/index.html
@@ -91,16 +91,21 @@
             
             <div class="md:w-1/2 space-y-8">
                 <div class="flex space-x-4">
-                 <img alt="San Francisco" class="w-1/3 h-64 object-cover rounded-lg" src="images/san-francisco.png"/>
-                 <img alt="Denver" class="w-1/3 h-64 object-cover rounded-lg" src="images/denver.png"/>
-                 <img alt="Bogota" class="w-1/3 h-64 object-cover rounded-lg" src="images/bogota.png"/>
+                    <img alt="San Francisco" class="w-1/3 h-64 object-cover rounded-lg" src="images/san-francisco.png"/>
+                    <img alt="Denver" class="w-1/3 h-64 object-cover rounded-lg" src="images/denver.png"/>
+                    <img alt="Bogota" class="w-1/3 h-64 object-cover rounded-lg" src="images/bogota.png"/>
                 </div>
                 <div class="flex space-x-4">
-                 <img alt="Ski" class="w-1/3 h-64 object-cover rounded-lg" height="400" src="images/ski.png" width="600"/>
-                 <img alt="Tennis" class="w-1/3 h-64 object-cover rounded-lg" height="400" src="images/tennis.png" width="600"/>
-                 <img alt="Golf" class="w-1/3 h-64 object-cover rounded-lg" height="400" src="images/golf.png" width="600"/>
+                    <img alt="Ski" class="w-1/3 h-64 object-cover rounded-lg" height="400" src="images/ski.png" width="600"/>
+                    <img alt="Tennis" class="w-1/3 h-64 object-cover rounded-lg" height="400" src="images/tennis.png" width="600"/>
+                    <img alt="Golf" class="w-1/3 h-64 object-cover rounded-lg" height="400" src="images/golf.png" width="600"/>
+                </div>
+                <div class="flex space-x-4">
+                    <img alt="Arepa" class="w-1/3 h-64 object-cover rounded-lg" height="400" src="images/arepa.png" width="600"/>
+                    <img alt="Sushi" class="w-1/3 h-64 object-cover rounded-lg" height="400" src="images/sushi.png" width="600"/>
+                    <img alt="Pizza" class="w-1/3 h-64 object-cover rounded-lg" height="400" src="images/pizza.png" width="600"/>
+                </div>
             </div>
-        </div>
     </main>
 
     <div class="fixed bottom-4 left-4 bg-gray-800 rounded-full p-3 cursor-pointer">
