touched up background and food section

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
                 <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
                     <h2 class="text-2xl font-bold text-gray-800 mb-4">Background</h2>
                     <p class="text-gray-600">
-                        I grew up in the Bay Area and lived there for 17 years before moving to Denver, CO where I have lived for the past 4 years.
+                        I grew up in the Bay Area and lived there for 17 years before moving to Denver, CO where I have lived for the past 4 years. <br><br>
                         I am also Colombian and get to visit friends and family, with whom I indulge in colombian culture and tradtions that I usually don't get to be a part of when I'm in the United States. 
                     </p>
                 </div>
                 <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
                     <h2 class="text-2xl font-bold text-gray-800 mb-4">Hobbies</h2>
                     <p class="text-gray-600">
-                        Tennis and golf have been a big part of my life since I started playing both at age six. I also love watching tennis just as much as playing.<br><br>
+                        I started playing tennis and golf at the age of six and they are a big part of my life. I also love watching tennis just as much as playing!<br><br>
                         I’m also a huge skier! I began skiing at eight, going every chance I got, and now that I live in Denver, I have easy access to the mountains and go often.<br><br>
                         Apart from sports, I’ve always loved music. I started playing the piano at five, and it’s still my favorite way to unwind and destress from school or work.
                     </p>
@@ -56,7 +56,8 @@
                 <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
                     <h2 class="text-2xl font-bold text-gray-800 mb-4">Food</h2>
                     <p class="text-gray-600">
-                        One thing you should know about me is that I just LOVE food! Sushi, Arepas, Pizza, Tacos, Mango, Yellow Curry, ANYTHING. 
+                        I love cooking! Some of my favorite things to make are arepas, orzo, curry, freshly baked sourdough bread, and croissants. <br><br>
+                        When it comes to eating, I enjoy a wide variety of dishes—whether it’s ajiaco, dim sum, empanadas, pozole, or something sweet like passionfruit or mango.
                     </p>
                 </div>
             </div>
