touched up hobbies

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="bg-white rounded-lg shadow-md p-6 h-64 flex flex-col justify-center">
                     <h2 class="text-2xl font-bold text-gray-800 mb-4">Hobbies</h2>
                     <p class="text-gray-600">
-                        I started playing tennis and golf at the age of six and they are a big part of my life. I also love watching tennis just as much as playing!<br><br>
+                        I started playing tennis and golf at the age of six and they are a big part of my life.<br><br>
                         I’m also a huge skier! I began skiing at eight, going every chance I got, and now that I live in Denver, I have easy access to the mountains and go often.<br><br>
                         Apart from sports, I’ve always loved music. I started playing the piano at five, and it’s still my favorite way to unwind and destress from school or work.
                     </p>
