--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <h2 class="text-2xl font-bold text-gray-800 mb-4">Food</h2>
                     <p class="text-gray-600">
                         I love cooking! Some of my favorite things to make are arepas, orzo, curry, freshly baked sourdough bread, and croissants. <br><br>
-                        When it comes to eating, I enjoy a wide variety of dishes—whether it’s ajiaco, dim sum, empanadas, pozole, or something sweet like passionfruit or mango.
+                        When it comes to eating, I enjoy a wide variety of dishes—whether it’s ajiaco, dim sum, empanadas, sushi, pozole, pizza, or something sweet like passionfruit or mango.
                     </p>
                 </div>
             </div>
