--- a/work-experience.html
+++ b/work-experience.html
@@ -42,7 +42,7 @@
             </ul>
         </div>
         <div class="bg-white rounded-lg shadow-md p-6 max-w-4xl mx-auto">
-            <h2 class="text-2xl font-bold text-gray-800 mb-4">IT Team and Environmental Summer Intern at Agtools Inc. </h2>
+            <h2 class="text-2xl font-bold text-gray-800 mb-4">Technology and Environmental Summer Intern at Agtools Inc. </h2>
             <ul class="list-disc pl-6 space-y-2">
                 <li>Analyzed Agtools' database and developed a pilot proposal using a sustainability widget that calculates fuel
                     and freight costs, reducing carbon emissions, and evaluates the environmental and economic impacts of
