--- a/assignments.html
+++ b/assignments.html
@@ -33,16 +33,17 @@
         <div class="bg-white rounded-lg shadow-md p-6 max-w-2xl mx-auto">
             <div class="space-y-6">
 
-                 <!-- Assignment 0 -->
+                <!-- Assignment 0 -->
                 <div>
                     <h2 class="text-2xl font-bold text-gray-800 mb-2">Assignment 0</h2>
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-0" target="_blank" class="text-blue-600 hover:underline">assignment-0</a>
+                        <a href="https://github.com/sobo3038/sofiabl-assignment-0" target="_blank" class="text-blue-600 hover:underline">Github Link</a>
                     </div>
-                    <p class="text-gray-600">XXX</p>
+                    <p class="text-gray-600">This is a simple Python script that adds two numbers and prints the result.</p>
                 </div>
+
 
                 <!-- Assignment 1 -->
                 <div>
