--- a/assignments.html
+++ b/assignments.html
@@ -39,9 +39,9 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/sofiabl-assignment-0" target="_blank" class="text-blue-600 hover:underline">Github Link</a>
+                        <a href="https://github.com/sobo3038/sofiabl-assignment-0" target="_blank" class="text-blue-600 hover:underline">Assignment-0</a>
                     </div>
-                    <p class="text-gray-600">This is a simple Python script that adds two numbers and prints the result.</p>
+                    <p class="text-gray-600">This is a Python script that takes two numbers as the input and outputs the sum.</p>
                 </div>
 
 
@@ -51,7 +51,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-1" target="_blank" class="text-blue-600 hover:underline">assignment-1</a>
+                        <a href="https://github.com/sobo3038/assignment-1" target="_blank" class="text-blue-600 hover:underline">Assignment-1</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -62,7 +62,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-2" target="_blank" class="text-blue-600 hover:underline">assignment-2</a>
+                        <a href="https://github.com/sobo3038/assignment-2" target="_blank" class="text-blue-600 hover:underline">Assignment-2</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -73,7 +73,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-3" target="_blank" class="text-blue-600 hover:underline">assignment-3</a>
+                        <a href="https://github.com/sobo3038/assignment-3" target="_blank" class="text-blue-600 hover:underline">Assignment-3</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -84,7 +84,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-4" target="_blank" class="text-blue-600 hover:underline">assignment-4</a>
+                        <a href="https://github.com/sobo3038/assignment-4" target="_blank" class="text-blue-600 hover:underline">Assignment-4</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -95,7 +95,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-5" target="_blank" class="text-blue-600 hover:underline">assignment-5</a>
+                        <a href="https://github.com/sobo3038/assignment-5" target="_blank" class="text-blue-600 hover:underline">Assignment-5</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -107,7 +107,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-6" target="_blank" class="text-blue-600 hover:underline">assignment-6</a>
+                        <a href="https://github.com/sobo3038/assignment-6" target="_blank" class="text-blue-600 hover:underline">Assignment-6</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -119,7 +119,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-7" target="_blank" class="text-blue-600 hover:underline">assignment-7</a>
+                        <a href="https://github.com/sobo3038/assignment-7" target="_blank" class="text-blue-600 hover:underline">Assignment-7</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -130,7 +130,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-8" target="_blank" class="text-blue-600 hover:underline">assignment-8</a>
+                        <a href="https://github.com/sobo3038/assignment-8" target="_blank" class="text-blue-600 hover:underline">Assignment-8</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -141,7 +141,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-9" target="_blank" class="text-blue-600 hover:underline">assignment-9</a>
+                        <a href="https://github.com/sobo3038/assignment-9" target="_blank" class="text-blue-600 hover:underline">Assignment-9</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -153,7 +153,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-10" target="_blank" class="text-blue-600 hover:underline">assignment-10</a>
+                        <a href="https://github.com/sobo3038/assignment-10" target="_blank" class="text-blue-600 hover:underline">Assignment-10</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -164,7 +164,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-11" target="_blank" class="text-blue-600 hover:underline">assignment-11</a>
+                        <a href="https://github.com/sobo3038/assignment-11" target="_blank" class="text-blue-600 hover:underline">Assignment-11</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
