--- a/assignments.html
+++ b/assignments.html
@@ -41,7 +41,7 @@
                         <span class="font-semibold mr-2">GitHub Link:</span>
                         <a href="https://github.com/sobo3038/sofiabl-assignment-0" target="_blank" class="text-blue-600 hover:underline">Assignment-0</a>
                     </div>
-                    <p class="text-gray-600">This is a Python script that takes two numbers as the input and outputs the sum.</p>
+                    <p class="text-gray-600">This assignemnt is a Python script that takes two numbers as the input and outputs the sum.</p>
                 </div>
 
 
@@ -51,9 +51,12 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-1" target="_blank" class="text-blue-600 hover:underline">Assignment-1</a>
+                        <a href="https://github.com/sobo3038/sofiabl-assignment-1" target="_blank" class="text-blue-600 hover:underline">Assignment-1</a>
                     </div>
-                    <p class="text-gray-600">XXX</p>
+                    <p class="text-gray-600">
+                        This assignment looks at elevator arrival data to determine the optimal location to wait in order to minimize walking distance to the next arriving elevator. 
+                        Using training and test data, this calculates the average distances from two potential waiting spots and confirmed that using arrival probabilities to adjust the waiting location slightly improved efficiency.
+                    </p>
                 </div>
 
                 <!-- Assignment 2 -->
@@ -62,7 +65,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-2" target="_blank" class="text-blue-600 hover:underline">Assignment-2</a>
+                        <a href="https://github.com/sobo3038/sofiabl-assignment-2" target="_blank" class="text-blue-600 hover:underline">Assignment-2</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -73,7 +76,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-3" target="_blank" class="text-blue-600 hover:underline">Assignment-3</a>
+                        <a href="https://github.com/sobo3038/sofiabl-assignment-3" target="_blank" class="text-blue-600 hover:underline">Assignment-3</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -84,7 +87,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-4" target="_blank" class="text-blue-600 hover:underline">Assignment-4</a>
+                        <a href="https://github.com/sobo3038/sofiabl-assignment-4" target="_blank" class="text-blue-600 hover:underline">Assignment-4</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -95,7 +98,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-5" target="_blank" class="text-blue-600 hover:underline">Assignment-5</a>
+                        <a href="https://github.com/sobo3038/sofiabl-assignment-5" target="_blank" class="text-blue-600 hover:underline">Assignment-5</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -107,7 +110,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-6" target="_blank" class="text-blue-600 hover:underline">Assignment-6</a>
+                        <a href="https://github.com/sobo3038/sofiabl-assignment-6" target="_blank" class="text-blue-600 hover:underline">Assignment-6</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -119,7 +122,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-7" target="_blank" class="text-blue-600 hover:underline">Assignment-7</a>
+                        <a href="https://github.com/sobo3038/sofiabl-assignment-7" target="_blank" class="text-blue-600 hover:underline">Assignment-7</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -130,7 +133,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-8" target="_blank" class="text-blue-600 hover:underline">Assignment-8</a>
+                        <a href="https://github.com/sobo3038/sofiabl-assignment-8" target="_blank" class="text-blue-600 hover:underline">Assignment-8</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -141,7 +144,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-9" target="_blank" class="text-blue-600 hover:underline">Assignment-9</a>
+                        <a href="https://github.com/sobo3038/sofiabl-assignment-9" target="_blank" class="text-blue-600 hover:underline">Assignment-9</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -153,7 +156,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-10" target="_blank" class="text-blue-600 hover:underline">Assignment-10</a>
+                        <a href="https://github.com/sobo3038/sofiabl-assignment-10" target="_blank" class="text-blue-600 hover:underline">Assignment-10</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
@@ -164,7 +167,7 @@
                     <div class="flex items-center mb-2">
                         <i class="fab fa-github text-gray-600 mr-2"></i>
                         <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/assignment-11" target="_blank" class="text-blue-600 hover:underline">Assignment-11</a>
+                        <a href="https://github.com/sobo3038/sofiabl-assignment-11" target="_blank" class="text-blue-600 hover:underline">Assignment-11</a>
                     </div>
                     <p class="text-gray-600">XXX</p>
                 </div>
