--- a/assignments.html
+++ b/assignments.html
@@ -67,8 +67,17 @@
                         <span class="font-semibold mr-2">GitHub Link:</span>
                         <a href="https://github.com/sobo3038/sofiabl-assignment-2" target="_blank" class="text-blue-600 hover:underline">Assignment-2</a>
                     </div>
-                    <p class="text-gray-600">XXX</p>
+                    <p class="text-gray-600 mb-4">This is a demo of the KMeans Clustering Algorithm Webpage.</p>
+
+                    <!-- Video Embed -->
+                    <div class="video-container">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/your-video-id" 
+                                title="KMeans Clustering Algo Webpage Demo" frameborder="0" 
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                        </iframe>
+                    </div>
                 </div>
+
 
                 <!-- Assignment 3 -->
                 <div>
