--- a/assignments.html
+++ b/assignments.html
@@ -67,14 +67,15 @@
                         <span class="font-semibold mr-2">GitHub Link:</span>
                         <a href="https://github.com/sobo3038/sofiabl-assignment-2" target="_blank" class="text-blue-600 hover:underline">Assignment-2</a>
                     </div>
-                    <p class="text-gray-600 mb-4">This is a demo of the KMeans Clustering Algorithm Webpage.</p>
+                    <p class="text-gray-600 mb-4">This assignemnt is an interactive web application that demonstrates the KMeans clustering algorithm using various initialization methods: 
+                        Random, Farthest First, KMeans++, and Manual. Users can visualize the clustering process step-by-step, generate new datasets, and reset the algorithm.</p>
 
                     <!-- Video Embed -->
                     <div class="video-container">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/your-video-id" 
-                                title="KMeans Clustering Algo Webpage Demo" frameborder="0" 
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                        </iframe>
+                        <video width="560" height="315" controls>
+                            <source src="videos/KMeans Clustering Algo Webpage Demo.mov" type="video/quicktime">
+                            Your browser does not support the video tag.
+                        </video>
                     </div>
                 </div>
 
