--- a/assignments.html
+++ b/assignments.html
@@ -73,7 +73,7 @@
                     <!-- Video Embed -->
                     <div class="video-container">
                         <video width="560" height="315" controls>
-                            <source src="videos/KMeans Assign2 Demo.mp4" type="video/mp4">
+                            <source src="/videos/A2 Demo Video.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
