--- a/assignments.html
+++ b/assignments.html
@@ -67,7 +67,7 @@
                         <span class="font-semibold mr-2">GitHub Link:</span>
                         <a href="https://github.com/sobo3038/sofiabl-assignment-2" target="_blank" class="text-blue-600 hover:underline">Assignment-2</a>
                     </div>
-                    <p class="text-gray-600 mb-4">This assignemnt is an interactive web application that demonstrates the KMeans clustering algorithm using various initialization methods: 
+                    <p class="text-gray-600 mb-4">This assignemnt is an interactive webpage that demonstrates the KMeans clustering algorithm using various initialization methods: 
                         Random, Farthest First, KMeans++, and Manual. Users can visualize the clustering process step-by-step, generate new datasets, and reset the algorithm.</p>
 
                     <!-- Video Embed -->
