--- a/assignments.html
+++ b/assignments.html
@@ -72,10 +72,7 @@
 
                     <!-- Video Embed -->
                     <div class="video-container">
-                        <video width="560" height="315" controls>
-                            <source src="/videos/A2 Demo Video.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                        <iframe src="https://drive.google.com/file/d/1O_de9mMeoEevOu99GVx-6qVHwpy61fFj/preview" width="560" height="315" allow="autoplay"></iframe>
                     </div>
                 </div>
 
