video for assignment 2 is done

--- a/assignments.html
+++ b/assignments.html
@@ -71,8 +71,8 @@
                         Random, Farthest First, KMeans++, and Manual. Users can visualize the clustering process step-by-step, generate new datasets, and reset the algorithm.</p>
 
                     <!-- Video Embed -->
-                    <div class="video-container">
-                        <iframe src="https://drive.google.com/file/d/1ItF3-NtwiOGBLry8ZPY3YB_Ud0NVyOu9/preview" width="800" height="450" allow="autoplay"></iframe>
+                    <div class="video-container flex justify-center">
+                        <iframe src="https://drive.google.com/file/d/1ItF3-NtwiOGBLry8ZPY3YB_Ud0NVyOu9/preview" width="1000" height="563" allow="autoplay"></iframe>
                     </div>
                 </div>
 
