added assignemnt 3 and description

--- a/assignments.html
+++ b/assignments.html
@@ -85,7 +85,8 @@
                         <span class="font-semibold mr-2">GitHub Link:</span>
                         <a href="https://github.com/sobo3038/sofiabl-assignment-3" target="_blank" class="text-blue-600 hover:underline">Assignment-3</a>
                     </div>
-                    <p class="text-gray-600">XXX</p>
+                    <p class="text-gray-600">This assignment applied SVD to the MNIST dataset to reduce its dimensionality, followed by training a logistic regression model. 
+                    The goal was to analyze the trade-off between accuracy and training time while identifying the optimal number of SVD components for efficient performance.</p>
                 </div>
 
                 <!-- Assignment 4 -->
