--- a/assignments.html
+++ b/assignments.html
@@ -97,8 +97,20 @@
                         <span class="font-semibold mr-2">GitHub Link:</span>
                         <a href="https://github.com/sobo3038/sofiabl-assignment-4" target="_blank" class="text-blue-600 hover:underline">Assignment-4</a>
                     </div>
-                    <p class="text-gray-600">XXX</p>
+                    <p class="text-gray-600 mb-4">
+                        This assignment is an interactive web application that implements a basic search engine using Latent Semantic Analysis (LSA). 
+                        The search engine will take a user’s query, perform LSA on a pool of documents, and return the top documents based on cosine similarity.
+                    </p>
+
+                    <!-- Video Embed -->
+                    <div class="video-container flex justify-center">
+                        <video width="800" controls>
+                            <source src="https://drive.google.com/uc?export=download&id=1ketn2npNOJQi-dWYhf4pvAj2JgA5tJmh" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
                 </div>
+
 
                 <!-- Assignment 5 -->
                 <div>
