--- a/assignments.html
+++ b/assignments.html
@@ -105,7 +105,7 @@
                     <!-- Video Embed -->
                     <div class="video-container flex justify-center">
                         <video width="800" controls>
-                            <source src="https://drive.google.com/uc?export=download&id=1ketn2npNOJQi-dWYhf4pvAj2JgA5tJmh" type="video/mp4">
+                            <source src="https://drive.google.com/uc?export=download&id=1ketn2npNOJQi-dWYhf4pvAj2JgA5tJmh" type="video/quicktime">
                             Your browser does not support the video tag.
                         </video>
                     </div>
