--- a/assignments.html
+++ b/assignments.html
@@ -104,10 +104,7 @@
 
                     <!-- Video Embed -->
                     <div class="video-container flex justify-center">
-                        <video width="800" controls>
-                            <source src="https://drive.google.com/uc?export=download&id=1wmlf0DxamSMC3iUYRMRYASqp1cvyG-r3" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                        <iframe src="https://drive.google.com/file/d/1wmlf0DxamSMC3iUYRMRYASqp1cvyG-r3/preview" width="800" height="450" allow="autoplay"></iframe>
                     </div>
                 </div>
 
