--- a/assignments.html
+++ b/assignments.html
@@ -117,7 +117,9 @@
                         <span class="font-semibold mr-2">GitHub Link:</span>
                         <a href="https://github.com/sobo3038/sofiabl-assignment-5" target="_blank" class="text-blue-600 hover:underline">Assignment-5</a>
                     </div>
-                    <p class="text-gray-600">XXX</p>
+                    <p class="text-gray-600">
+                        This assignment is a K-Nearest Neighbors (KNN) model built from scratch that predicts customer churn for a bank, using historical data.
+                    </p>
                 </div>
 
 
