--- a/assignments.html
+++ b/assignments.html
@@ -122,6 +122,19 @@
                     </p>
                 </div>
 
+                <!-- Midterm -->
+                <div>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Midterm</h2>
+                    <div class="flex items-center mb-2">
+                        <i class="fab fa-github text-gray-600 mr-2"></i>
+                        <span class="font-semibold mr-2">GitHub Link:</span>
+                        <a href="https://github.com/sobo3038/sofiabl-midterm/" target="_blank" class="text-blue-600 hover:underline">Midterm</a>
+                    </div>
+                    <p class="text-gray-600">
+                        This midterm competition is to predict star ratings for Amazon Movie Reviews by turning both review text and metadata into predictive features.
+                    </p>
+                </div>
+
 
                 <!-- Assignment 6 -->
                 <div>
