--- a/assignments.html
+++ b/assignments.html
@@ -144,7 +144,12 @@
                         <span class="font-semibold mr-2">GitHub Link:</span>
                         <a href="https://github.com/sobo3038/sofiabl-assignment-6" target="_blank" class="text-blue-600 hover:underline">Assignment-6</a>
                     </div>
-                    <p class="text-gray-600">XXX</p>
+                    <p class="text-gray-600">
+                        This assignment is an interactive linear regression webpage that demonstrates how adjusting sample size, error mean, variance, and simulation count affects regression slopes and intercepts on random data.                    </p>
+                    <!-- Video Embed -->
+                    <div class="video-container flex justify-center">
+                        <iframe src="https://drive.google.com/file/d/1fuqiWC3J_NV2mTKtut1jYWSK6Xw2O7Lb/preview" width="800" height="450" allow="autoplay"></iframe>
+                    </div>
                 </div>
 
 
