--- a/assignments.html
+++ b/assignments.html
@@ -161,7 +161,11 @@
                         <span class="font-semibold mr-2">GitHub Link:</span>
                         <a href="https://github.com/sobo3038/sofiabl-assignment-7" target="_blank" class="text-blue-600 hover:underline">Assignment-7</a>
                     </div>
-                    <p class="text-gray-600">XXX</p>
+                    </p>
+                    <!-- Video Embed -->
+                    <div class="video-container flex justify-center">
+                        <iframe src="https://drive.google.com/file/d/1IZ1F8aNhSmfK_wg7CMUUgVj1e-qaevci/preview" width="800" height="450" allow="autoplay"></iframe>
+                    </div>
                 </div>
 
                 <!-- Assignment 8 -->
