--- a/assignments.html
+++ b/assignments.html
@@ -161,6 +161,8 @@
                         <span class="font-semibold mr-2">GitHub Link:</span>
                         <a href="https://github.com/sobo3038/sofiabl-assignment-7" target="_blank" class="text-blue-600 hover:underline">Assignment-7</a>
                     </div>
+                    <p class="text-gray-600">
+                        This assignment adds hypothesis testing and confidence intervals to the linear regression application, allowing users to test the significance of regression parameters and calculate confidence intervals based on simulations.
                     </p>
                     <!-- Video Embed -->
                     <div class="video-container flex justify-center">
