--- a/assignments.html
+++ b/assignments.html
@@ -178,8 +178,15 @@
                         <span class="font-semibold mr-2">GitHub Link:</span>
                         <a href="https://github.com/sobo3038/sofiabl-assignment-8" target="_blank" class="text-blue-600 hover:underline">Assignment-8</a>
                     </div>
-                    <p class="text-gray-600">XXX</p>
+                    <p class="text-gray-600">
+                        This assignment shows the effect of shifting clusters in a dataset on the parameters of a logistic regression model.
+                    </p>
+                    <!-- Video Embed -->
+                    <div class="video-container flex justify-center">
+                        <iframe src="https://drive.google.com/file/d/1x0mdC5x6mOtYb7NJvNmK1X4UdQnW38iz/preview" width="800" height="450" allow="autoplay"></iframe>
+                    </div>
                 </div>
+
 
                 <!-- Assignment 9 -->
                 <div>
