--- a/assignments.html
+++ b/assignments.html
@@ -196,8 +196,15 @@
                         <span class="font-semibold mr-2">GitHub Link:</span>
                         <a href="https://github.com/sobo3038/sofiabl-assignment-9" target="_blank" class="text-blue-600 hover:underline">Assignment-9</a>
                     </div>
-                    <p class="text-gray-600">XXX</p>
+                    <p class="text-gray-600">
+                        This assignment involves implementing a Feedforward Neural Network with one hidden layer for binary classification and visualizing the learned features, decision boundary, and gradients.
+                    </p>
+                    <!-- Video Embed -->
+                    <div class="video-container flex justify-center">
+                        <iframe src="https://drive.google.com/file/d/1jAeYC3PkcxiM2XOHobGIniUVBEmLxcsT/preview" width="800" height="450" allow="autoplay"></iframe>
+                    </div>
                 </div>
+
 
 
                 <!-- Assignment 10 -->
