--- a/assignments.html
+++ b/assignments.html
@@ -206,8 +206,7 @@
                 </div>
 
 
-
-                <!-- Assignment 10 -->
+               <!-- Assignment 10 -->
                 <div>
                     <h2 class="text-2xl font-bold text-gray-800 mb-2">Assignment 10</h2>
                     <div class="flex items-center mb-2">
@@ -215,19 +214,16 @@
                         <span class="font-semibold mr-2">GitHub Link:</span>
                         <a href="https://github.com/sobo3038/sofiabl-assignment-10" target="_blank" class="text-blue-600 hover:underline">Assignment-10</a>
                     </div>
-                    <p class="text-gray-600">XXX</p>
+                    <p class="text-gray-600">
+                        This assignemnt builds a simplified Google Image Search with a GUI that allows users to search for relevant images using text, image, or hybrid queries while supporting PCA-based embedding dimensionality reduction.
+                    </p>
+                    <!-- Video Embed -->
+                    <div class="video-container flex justify-center">
+                        <iframe src="https://drive.google.com/file/d/1uycWYh0ihqzkcZ42KVtVU4t1n4gG3iA4/preview" width="800" height="450" allow="autoplay"></iframe>
+                    </div>
                 </div>
 
-                <!-- Assignment 11 -->
-                <div>
-                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Assignment 11</h2>
-                    <div class="flex items-center mb-2">
-                        <i class="fab fa-github text-gray-600 mr-2"></i>
-                        <span class="font-semibold mr-2">GitHub Link:</span>
-                        <a href="https://github.com/sobo3038/sofiabl-assignment-11" target="_blank" class="text-blue-600 hover:underline">Assignment-11</a>
-                    </div>
-                    <p class="text-gray-600">XXX</p>
-                </div>
+
             </div>
         </div>
     </main>
