--- a/assignments.html
+++ b/assignments.html
@@ -223,6 +223,17 @@
                     </div>
                 </div>
 
+                <!-- Extra Credit -->
+                <div>
+                    <h2 class="text-2xl font-bold text-gray-800 mb-2">Extra Credit</h2>
+                    <div class="flex items-center mb-2">
+                        <i class="fab fa-github text-gray-600 mr-2"></i>
+                        <span class="font-semibold mr-2">GitHub Link:</span>
+                        <a href="https://github.com/sobo3038/sofiabl-extracredit" target="_blank" class="text-blue-600 hover:underline">Extra Credit</a>
+                    </div>
+                    <p class="text-gray-600"></p>
+                </div>
+
 
             </div>
         </div>
