working on index and projects

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <header class="max-w-4xl mx-auto mb-20">
         <div class="text-sm text-gray-600 mb-2">HELLO EVERYONE</div>
-        <h1 class="text-5xl font-bold mb-2">Sofia Boada 🪄</h1>
+        <h1 class="text-5xl font-bold mb-2">Sofia Boada</h1>
         <div class="text-orange-500 font-medium mb-3">TECHNOLOGY ANALYST</div>
         <div class="text-gray-600 text-sm mb-2">Python • Java • Swift • C++ • SQL • JS • Node • OCaml • Linux • GoLang • HTML • CSS</div>
         <div class="text-gray-600 text-sm mb-6"> Boston University '25 | Computer Science  </div>
