--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
         <div class="grid grid-cols-3 gap-6">
             <div class="bg-gradient-to-br from-blue-200 to-green-200 p-6 rounded-xl">
                 <div class="flex justify-between mb-4">
-                    <h3 class="font-bold">Android & IOS Apps</h3>
+                    <h3 class="font-bold"></h3>
                     <span>⚡</span>
                 </div>
-                <p class="text-sm mb-4">Development of 3 cross platform mobile apps made with Apache Cordova:</p>
+                <p class="text-sm mb-4"></p>
                 <ul class="text-sm mb-4">
-                    <li>• Canary Enjoy</li>
-                    <li>• Cashback App</li>
-                    <li>• Pensione Alicante App</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
                 </ul>
-                <p class="text-sm mb-4">Developed together with Andrea Pezza & Cristian Zecca</p>
+                <p class="text-sm mb-4"></p>
                 <div class="flex gap-2">
                     <img src="https://placehold.co/20x20" alt="Android icon" class="w-5" width="20" height="20">
                     <img src="https://placehold.co/20x20" alt="Apple icon" class="w-5" width="20" height="20">
@@ -51,16 +51,16 @@
             </div>
             <div class="bg-gradient-to-br from-purple-200 to-pink-200 p-6 rounded-xl">
                 <div class="flex justify-between mb-4">
-                    <h3 class="font-bold">E-Commerce Websites</h3>
+                    <h3 class="font-bold"></h3>
                     <span>⚡</span>
                 </div>
-                <p class="text-sm mb-4">Development and maintenance of 3 e-commerce websites powered by CodeIgniter, a powerful PHP framework with a very small footprint:</p>
+                <p class="text-sm mb-4"></p>
                 <ul class="text-sm mb-4">
-                    <li>• pistastait</li>
-                    <li>• sicilyprodottitipici.it</li>
-                    <li>• donboscon.es</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
                 </ul>
-                <p class="text-sm mb-4">Developed for Essel IT Consulting</p>
+                <p class="text-sm mb-4"></p>
                 <div class="flex gap-2">
                     <img src="https://placehold.co/20x20" alt="Tech icon 3" class="w-5" width="20" height="20">
                     <img src="https://placehold.co/20x20" alt="Tech icon 4" class="w-5" width="20" height="20">
@@ -70,16 +70,16 @@
             </div>
             <div class="bg-gradient-to-br from-red-200 to-yellow-200 p-6 rounded-xl">
                 <div class="flex justify-between mb-4">
-                    <h3 class="font-bold">Blogs & Landings</h3>
+                    <h3 class="font-bold"></h3>
                     <span>⚡</span>
                 </div>
-                <p class="text-sm mb-4">Development of 2 blogs and this portfolio. Used Node, Next.js (v.6) & Webpack:</p>
+                <p class="text-sm mb-4"></p>
                 <ul class="text-sm mb-4">
-                    <li>• ambidestro.it</li>
-                    <li>• mxadev.com</li>
-                    <li>• tipensimattiapp</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
                 </ul>
-                <p class="text-sm mb-4">Check out my blog posts! I post regularly about programming and other topics I'm working with!</p>
+                <p class="text-sm mb-4"></p>
                 <div class="flex gap-2">
                     <img src="https://placehold.co/20x20" alt="Tech icon 7" class="w-5" width="20" height="20">
                     <img src="https://placehold.co/20x20" alt="Tech icon 8" class="w-5" width="20" height="20">
@@ -94,13 +94,13 @@
         <h2 class="text-gray-600 text-sm mb-8">MY ARCHIVEMENTS —</h2>
         <div class="grid grid-cols-3 gap-6">
             <div class="border border-gray-200 rounded-xl p-6">
-                <h3 class="font-bold mb-2">FreeCodeCamp 🎓</h3>
+                <h3 class="font-bold mb-2"> </h3>
             </div>
             <div class="border border-gray-200 rounded-xl p-6">
-                <h3 class="font-bold mb-2">CodersRank</h3>
+                <h3 class="font-bold mb-2"></h3>
             </div>
             <div class="border border-gray-200 rounded-xl p-6">
-                <h3 class="font-bold mb-2">10fastfingers</h3>
+                <h3 class="font-bold mb-2"></h3>
             </div>
         </div>
     </section>
