--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="bg-gradient-to-br from-blue-200 to-green-200 p-6 rounded-xl">
                 <div class="flex justify-between mb-4">
                     <h3 class="font-bold"></h3>
-                    <span>⚡</span>
+                    <span></span>
                 </div>
                 <p class="text-sm mb-4"></p>
                 <ul class="text-sm mb-4">
@@ -52,7 +52,7 @@
             <div class="bg-gradient-to-br from-purple-200 to-pink-200 p-6 rounded-xl">
                 <div class="flex justify-between mb-4">
                     <h3 class="font-bold"></h3>
-                    <span>⚡</span>
+                    <span></span>
                 </div>
                 <p class="text-sm mb-4"></p>
                 <ul class="text-sm mb-4">
@@ -71,7 +71,7 @@
             <div class="bg-gradient-to-br from-red-200 to-yellow-200 p-6 rounded-xl">
                 <div class="flex justify-between mb-4">
                     <h3 class="font-bold"></h3>
-                    <span>⚡</span>
+                    <span></span>
                 </div>
                 <p class="text-sm mb-4"></p>
                 <ul class="text-sm mb-4">
